force-app/main/default/objects/Likes__c/Likes__c.object-meta.xml
<CustomObject>
    <label>Like</label>
    <nameField>
        <displayFormat>Like-{0000}</displayFormat>
        <label>Like number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Likes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>