force-app/main/default/objects/Likes__c/fields/Liked_by__c.field-meta.xml
<CustomField>
    <fullName>Liked_by__c</fullName>
    <formula>CreatedBy.LastName + &apos;,&apos; + CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liked by</label>
    <type>Text</type>
</CustomField>