force-app/main/default/objects/Likes__c/fields/Liked_by_Id__c.field-meta.xml
<CustomField>
    <fullName>Liked_by_Id__c</fullName>
    <label>Liked by Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>