force-app/main/default/objects/Likes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Post__c</columns>
    <columns>Liked_by_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>